# VoiceClone

./: .gitignore  README.md  inference.py  preprocessing.py  pyproject.toml  train.py
config/: default.yaml
datasets/: dataloader.py  dataloader_vctk.py
models/: VoiceClone.py  embedder.py
utils/: adabound.py  audio.py  convert.py  evaluation.py  hparams.py  plotting.py  train.py  writer.py
